# centos7-vcpkg-physx

./: Dockerfile  README.md
src/: CMakeLists.txt  main.cpp
